Revision history for Perl module CPAN::Reporter::Smoker

0.12

    - Added: shows count of distributions found when index is processed
      and number of the current distribution being tested

    - Changed: CPAN::Reporter history is cached at startup for faster 
      processing of distributions already tested
    
0.11 Sat May 17 11:59:08 EDT 2008

    - Documented: support for 'build_dir_reuse' is experimental and needs
      CPAN 1.92_62 (as yet unreleased) to work properly
    
0.10 Fri May 16 08:27:47 EDT 2008

    - Added: 'clean_cache_after' argument to have CPAN clean its build cache
      after a certain number of distributions are smoked (default 100)

    - Added: 'set_term_title' boolean argument to control whether the terminal
      title is updated or not (default 1)

    - Changed: if CPAN config option 'build_dir_reuse' is true and CPAN has
      the 'reset_tested' method, then 'reset_tested' will be called prior
      to each distribution's smoke test to limit PERL5INC to direct
      dependencies only instead of all available build directories

    - Documented: how to use (and limitations of) CPAN's build_dir_reuse
      config option

0.09 Wed Apr 23 22:56:17 EDT 2008

    - Documented: CPAN distroprefs option is 'prefs_dir' not 'pref_dir'
      (Serguei Trouchelle)

0.08 Mon Mar 24 13:46:46 EDT 2008

    - Changed: smoker now maintains a cache of distributions seen during 
      a session to speed up skipping distributions already tested when
      the smoker rechecks indices and restarts testing
    
    - Fixed: our $SIG{INT} handler now installed *after* CPAN.pm installs its 
      handler so we take precedence

0.07 Mon Mar 10 08:32:50 EDT 2008

    - Added: Sets title of terminal window (xterm or Win32) to indicate 
      current distribution being smoked (adds Term::Title as prereq)

    - Changed: interrupting smoker with CTRL-C now shows what distribution
      was interrupted (helpful for disabling in distroprefs)
