@@ -25,6 +25,14 @@ my @good_args = (
         label => "set_term_title",
         args => [ set_term_title => 0 ],
     },
+    {
+    {
+        label => "status_file - dir/file",
+        args => [ status_file => File::Spec->catfile( File::Spec->tmpdir, 'foo.txt') ],
+    },
+        label => "status_file - bare filename",
+        args => [ status_file => 'foo.txt' ],
+    },
 );
 
 my @bad_args = (
@@ -55,6 +63,10 @@ my @bad_args = (
     {
         label => "set_term_title with 2",
         args => [ set_term_title => 2 ],
+    },
+    {
+        label => "status_file",
+        args => [ status_file => 'slakjdflaksjdfkds/foo.txt' ],
     },
 );
 
